--- a/租赁网站/leaseinfo.html
+++ b/租赁网站/leaseinfo.html
@@ -14,19 +14,19 @@
 <body class="mdui-loaded mdui-theme-primary-light-blue">
 
   <!-- 页首 -->
-  <div class="mdui-appbar mdui-shadow-1">
+  <div class="mdui-appbar mdui-shadow-1 mdui-color-teal mdui-m-a-0 mdui-p-a-0">
     <div class="mdui-container-fluid">
       <div class="mdui-row">
         <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
-          <div class="mdui-toolbar mdui-color-white">
+          <div class="mdui-toolbar mdui-color-teal">
             <a href="index.html" class="mdui-btn mdui-btn-icon"><img class="mdui-icon material-icons" src="images/logo.png"></a>
             <a href="index.html" class="mdui-typo-title">脚手架租赁网站</a>
             <div class="mdui-toolbar-spacer"></div>
             <div id="user-status">
             </div>
           </div>
-          <div class="mdui-tab mdui-tab-centered mdui-tab-full-width mdui-color-white" mdui-tab>
-            <a href="index.html" class="mdui-ripple mdui-ripple-white ">首页</a>
+          <div class="mdui-tab mdui-tab-centered mdui-tab-full-width mdui-color-teal" mdui-tab>
+            <a href="index.html" class="mdui-ripple mdui-ripple-white">首页</a>
             <a href="leaseinfo.html" class="mdui-ripple mdui-ripple-white mdui-tab-active">出租信息</a>
             <a href="rentinginfo.html" class="mdui-ripple mdui-ripple-white">求租信息</a>
             <a href="enterpriseinfo.html" class="mdui-ripple mdui-ripple-white">企业信息</a>
