--- a/租赁网站/rentinginfo.html
+++ b/租赁网站/rentinginfo.html
@@ -211,12 +211,12 @@
     </div>
   </div>
   <!-- 页脚 -->
-  <footer class="mdui-color-light-blue-200">
+  <footer class="mdui-color-grey-800">
     <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
-      <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
-      <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
-      <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
-      <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+      <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">联系我们：1-800-123-4567</span>
+      <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">地址信息：南京信息工程大学</span>
+      <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">Copyright © 2018.Company name All rights reserved</span>
+      <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">版权信息</span>
     </div>
   </footer>
 
