--- a/租赁网站/personalcenter.html
+++ b/租赁网站/personalcenter.html
@@ -14,7 +14,7 @@
 <body class="mdui-loaded mdui-drawer-body-left mdui-appbar-with-tab mdui-appbar-with-toolbar">
   <!-- 页首 -->
   <header class="mdui-appbar mdui-appbar-fixed">
-    <div class="mdui-toolbar mdui-color-light-blue-200">
+    <div class="mdui-toolbar mdui-color-teal">
       <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-drawer="{target: '#main-drawer', swipe: true}"
         id="open">
         <i class="mdui-icon material-icons">menu</i>
@@ -27,7 +27,7 @@
         <a href="index.html" onclick="Exit()" class="mdui-btn">退出</a>
       </div>
     </div>
-    <div class="mdui-tab mdui-color-light-blue-200" >
+    <div class="mdui-tab mdui-tab-centered mdui-tab-full-width mdui-color-teal" >
       <a href="index.html" class="mdui-ripple mdui-ripple-white">首页</a>
       <a href="leaseinfo.html" class="mdui-ripple mdui-ripple-white">出租信息</a>
       <a href="rentinginfo.html" class="mdui-ripple mdui-ripple-white">求租信息</a>
