--- a/租赁网站/personalcenter.html
+++ b/租赁网站/personalcenter.html
@@ -13,8 +13,8 @@
 
 <body class="mdui-loaded mdui-drawer-body-left mdui-appbar-with-tab mdui-appbar-with-toolbar">
   <!-- 页首 -->
-  <header class="mdui-appbar mdui-appbar-fixed mdui-shadow-0">
-    <div class="mdui-toolbar mdui-color-teal">
+  <header class="mdui-appbar mdui-appbar-fixed mdui-shadow-0 mdui-color-teal">
+    <div class="mdui-toolbar mdui-color-teal" style="padding:0 240px">
       <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-drawer="{target: '#main-drawer', swipe: true}"
         id="open">
         <i class="mdui-icon material-icons">menu</i>
@@ -27,13 +27,15 @@
         <a href="index.html" onclick="Exit()" class="mdui-btn">退出</a>
       </div>
     </div>
-    <div class="mdui-tab mdui-tab-centered mdui-tab-full-width mdui-color-teal">
+    <div class="mdui-tab mdui-tab-centered mdui-tab-full-width mdui-color-teal" style="padding:0 240px">
       <a href="index.html" class="mdui-ripple mdui-ripple-white">首页</a>
       <a href="leaseinfo.html" class="mdui-ripple mdui-ripple-white">出租信息</a>
       <a href="rentinginfo.html" class="mdui-ripple mdui-ripple-white">求租信息</a>
       <a href="enterpriseinfo.html" class="mdui-ripple mdui-ripple-white">企业信息</a>
     </div>
+
   </header>
+
   <div id="tologin" class="mdui-dialog mdui-dialog-open" style="display: none; top: 75px; height: 400px; width: 400px">
     <button class="mdui-btn mdui-btn-icon mdui-text-color-light-blue-200 close">
       <i class="mdui-icon material-icons">close</i>
@@ -58,10 +60,9 @@
     </div>
   </div>
 
-  <!-- 默认抽屉栏在左侧 -->
+  <!-- 左侧导航栏 -->
   <div class="mdui-drawer mdui-drawer-open mdui-color-white mdui-shadow-0" id="main-drawer">
-    <div class="mdui-list mdui-shadow-0" mdui-collapse="{accordion: true}" style="margin-bottom: 76px;">
-
+    <div class="mdui-list mdui-shadow-0" mdui-collapse="{accordion: true}">
       <div class="mdui-collapse-item">
         <div class="mdui-collapse-item-header mdui-list-item mdui-ripple">
           <i class="mdui-list-item-icon mdui-icon material-icons">account_circle</i>
@@ -138,8 +139,11 @@
     </div>
   </div>
 
+  <!-- 页面内容 -->
   <div class="mdui-container">
+    1111111111111111
   </div>
+
 
 
 
