--- a/租赁网站/specificrentinginfo.html
+++ b/租赁网站/specificrentinginfo.html
@@ -11,18 +11,18 @@
   <title>求租信息</title>
 </head>
 
-<body class="mdui-loaded mdui-theme-primary-light-blue">
+<body class="mdui-loaded mdui-theme-primary-teal">
 
   <!-- 页首 -->
   <div class="mdui-appbar">
-    <div class="mdui-toolbar mdui-color-light-blue-200">
+    <div class="mdui-toolbar mdui-color-teal">
       <a href="index.html" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
       <a href="index.html" class="mdui-typo-title">Title</a>
       <div class="mdui-toolbar-spacer"></div>
       <div id="user-status">
       </div>
     </div>
-    <div class="mdui-tab mdui-color-light-blue-200" mdui-tab>
+    <div class="mdui-tab mdui-color-teal" mdui-tab>
       <a href="index.html" class="mdui-ripple mdui-ripple-white">首页</a>
       <a href="leaseinfo.html" class="mdui-ripple mdui-ripple-white">出租信息</a>
       <a href="rentinginfo.html" class="mdui-ripple mdui-ripple-white mdui-tab-active">求租信息</a>
