--- a/租赁网站/index.html
+++ b/租赁网站/index.html
@@ -119,16 +119,16 @@
               <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
             </div>
             <li class="mdui-list-item mdui-ripple">
-              <a class="mdui-list-item-content">咨询</a>
+              <a class="mdui-list-item-content mdui-text-center">咨询</a>
             </li>
             <li class="mdui-list-item mdui-ripple">
-              <a class="mdui-list-item-content">咨询</a>
+              <a class="mdui-list-item-content mdui-text-center">咨询</a>
             </li>
             <li class="mdui-list-item mdui-ripple">
-              <a class="mdui-list-item-content">咨询</a>
+              <a class="mdui-list-item-content mdui-text-center">咨询</a>
             </li>
             <li class="mdui-list-item mdui-ripple">
-              <a class="mdui-list-item-content">咨询</a>
+              <a class="mdui-list-item-content mdui-text-center">咨询</a>
             </li>
           </ul>
         </div>
@@ -137,23 +137,26 @@
       <!-- 求租信息 -->
       <div class="mdui-row mdui-m-y-2">
         <div class="mdui-col-xs-8 mdui-col-offset-xs-2">
-          <ul class="mdui-list mdui-shadow-1">
-            <div class="info-head">
-              <h2 class="title mdui-text-color-teal mdui-typo-title">求租信息</h2>
-              <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
-            </div>
-            <li class="mdui-list-item mdui-ripple">
-              <a class="mdui-list-item-content">一条求租信息</a>
-            </li>
-            <li class="mdui-list-item mdui-ripple">
-              <a class="mdui-list-item-content">一条求租信息</a>
-            </li>
-            <li class="mdui-list-item mdui-ripple">
-              <a class="mdui-list-item-content">一条求租信息</a>
-            </li>
-            <li class="mdui-list-item mdui-ripple">
-              <a class="mdui-list-item-content">一条求租信息</a>
-            </li>
+          <div class="mdui-col-xs-5" style="padding: 0;margin: 0">
+            <ul class="mdui-list mdui-shadow-1">
+              <div class="info-head">
+                <h2 class="title mdui-text-color-teal mdui-typo-title">求租信息</h2>
+                <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
+              </div>
+              <li class="mdui-list-item mdui-ripple">
+                <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
+              </li>
+              <li class="mdui-list-item mdui-ripple">
+                <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
+              </li>
+              <li class="mdui-list-item mdui-ripple">
+                <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
+              </li>
+              <li class="mdui-list-item mdui-ripple">
+                <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
+              </li>
+          </div>
+
           </ul>
         </div>
       </div>
@@ -169,16 +172,16 @@
                   <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
                 </div>
                 <li class="mdui-list-item mdui-ripple">
-                  <a class="mdui-list-item-content">一条出租信息</a>
+                  <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
                 <li class="mdui-list-item mdui-ripple">
-                  <a class="mdui-list-item-content">一条出租信息</a>
+                  <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
                 <li class="mdui-list-item mdui-ripple">
-                  <a class="mdui-list-item-content">一条出租信息</a>
+                  <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
                 <li class="mdui-list-item mdui-ripple">
-                  <a class="mdui-list-item-content">一条出租信息</a>
+                  <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
               </ul>
             </div>
@@ -189,16 +192,16 @@
                   <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
                 </div>
                 <li class="mdui-list-item mdui-ripple">
-                  <a class="mdui-list-item-content">一条出租信息</a>
+                  <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
                 <li class="mdui-list-item mdui-ripple">
-                  <a class="mdui-list-item-content">一条出租信息</a>
+                  <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
                 <li class="mdui-list-item mdui-ripple">
-                  <a class="mdui-list-item-content">一条出租信息</a>
+                  <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
                 <li class="mdui-list-item mdui-ripple">
-                  <a class="mdui-list-item-content">一条出租信息</a>
+                  <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
               </ul>
             </div>
