完成个人中心页面的框架

--- a/租赁网站/index.html
+++ b/租赁网站/index.html
@@ -93,7 +93,8 @@
       <!-- 最新资讯 -->
       <div class="mdui-row mdui-m-y-2">
         <div class="mdui-col-xs-4 mdui-col-offset-xs-2">
-          <ul class="mdui-list mdui-shadow-1">
+          <div class="mdui-divider"></div>
+          <ul class="mdui-list">
             <div class="info-head">
               <h2 class="title mdui-typo-title mdui-text-color-teal">今日动态</h2>
               <a class="more mdui-text-color-teal"><small>成交数量：4件</small></a>
@@ -111,9 +112,11 @@
               <a class="mdui-list-item-content" style="text-align: center">出租方名称</a>
             </li>
           </ul>
+          <div class="mdui-divider"></div>
         </div>
-        <div class="mdui-col-xs-4 ">
-          <ul class="mdui-list mdui-shadow-1">
+        <div class="mdui-col-xs-4">
+          <div class="mdui-divider"></div>
+          <ul class="mdui-list">
             <div class="info-head">
               <h2 class="title mdui-typo-title mdui-text-color-teal">最新咨询</h2>
               <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
@@ -131,33 +134,46 @@
               <a class="mdui-list-item-content mdui-text-center">咨询</a>
             </li>
           </ul>
+          <div class="mdui-divider"></div>
         </div>
       </div>
 
       <!-- 求租信息 -->
       <div class="mdui-row mdui-m-y-2">
         <div class="mdui-col-xs-8 mdui-col-offset-xs-2">
-          <div class="mdui-col-xs-5" style="padding: 0;margin: 0">
-            <ul class="mdui-list mdui-shadow-1">
-              <div class="info-head">
-                <h2 class="title mdui-text-color-teal mdui-typo-title">求租信息</h2>
-                <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
+          <div class="mdui-row-xs-2">
+            <div class="mdui-col">
+              <ul class="mdui-list">
+                <div class="info-head">
+                  <h2 class="title mdui-text-color-teal mdui-typo-title">求租信息</h2>
+                  <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
+                </div>
+                <li class="mdui-list-item mdui-ripple">
+                  <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
+                </li>
+                <li class="mdui-list-item mdui-ripple">
+                  <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
+                </li>
+                <li class="mdui-list-item mdui-ripple">
+                  <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
+                </li>
+                <li class="mdui-list-item mdui-ripple">
+                  <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
+                </li>
+              </ul>
+              <div class="mdui-divider"></div>
+            </div>
+            <div class="mdui-col">
+              <h2 class="title mdui-text-color-teal mdui-typo-title mdui-text-center">产品推荐</h2>
+              <div class="slider mdui-m-b-2" id="slider3">
+                <ul>
+                  <li><img src="images/6.jpg" alt="" width="80%" height="200"></li>
+                  <li><img src="images/6.jpg" alt="" width="80%" height="200"></li>
+                  <li><img src="images/6.jpg" alt="" width="80%" height="200"></li>
+                </ul>
               </div>
-              <li class="mdui-list-item mdui-ripple">
-                <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
-              </li>
-              <li class="mdui-list-item mdui-ripple">
-                <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
-              </li>
-              <li class="mdui-list-item mdui-ripple">
-                <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
-              </li>
-              <li class="mdui-list-item mdui-ripple">
-                <a class="mdui-list-item-content mdui-text-center">一条求租信息</a>
-              </li>
+            </div>
           </div>
-
-          </ul>
         </div>
       </div>
 
@@ -166,7 +182,7 @@
         <div class="mdui-col-xs-8 mdui-col-offset-xs-2">
           <div class="mdui-row-xs-2">
             <div class="mdui-col">
-              <ul class="mdui-list mdui-shadow-1">
+              <ul class="mdui-list">
                 <div class="info-head">
                   <h2 class="title mdui-typo-title mdui-text-color-teal">塔吊出租信息</h2>
                   <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
@@ -184,9 +200,10 @@
                   <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
               </ul>
+              <div class="mdui-divider"></div>
             </div>
             <div class="mdui-col">
-              <ul class="mdui-list mdui-shadow-1">
+              <ul class="mdui-list">
                 <div class="info-head">
                   <h2 class="title mdui-typo-title mdui-text-color-teal">脚手架出租信息</h2>
                   <a class="more mdui-text-color-teal mdui-btn mdui-ripple"><small>查看更多</small></a>
@@ -204,6 +221,7 @@
                   <a class="mdui-list-item-content mdui-text-center">一条出租信息</a>
                 </li>
               </ul>
+              <div class="mdui-divider"></div>
             </div>
           </div>
         </div>
@@ -253,7 +271,8 @@
     <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
       <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">联系我们：1-800-123-4567</span>
       <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">地址信息：南京信息工程大学</span>
-      <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">Copyright © 2018.Company name All rights reserved</span>
+      <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">Copyright © 2018.Company name All rights
+        reserved</span>
       <span class="mdui-m-y-1 mdui-typo-body-1 mdui-text-color-white">版权信息</span>
     </div>
   </footer>
