--- a/租赁网站/rentinginfo.html
+++ b/租赁网站/rentinginfo.html
@@ -95,20 +95,15 @@
                 </div>
 
                 <div class="mdui-col mdui-center">
-                  <button class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-light-blue-200 mdui-ripple mdui-center">搜索</button>
+                  <button class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-center">搜索</button>
                 </div>
 
                 <div class="mdui-col mdui-center">
-                  <a class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-light-blue-200 mdui-ripple mdui-center"
+                  <a class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-center"
                     href="">发布求租信息</a>
                 </div>
-
               </div>
-
             </div>
-
-
-
           </div>
 
           <!--列表-->
