--- a/租赁网站/leaseinfo.html
+++ b/租赁网站/leaseinfo.html
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="http://cdnjs.loli.net/ajax/libs/mdui/0.4.1/css/mdui.min.css">
   <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/leaseinfo.css">
   <title>出租信息</title>
 </head>
 
@@ -95,116 +96,169 @@
                 </div>
 
                 <div class="mdui-col mdui-center">
-                  <button class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-light-blue-200 mdui-ripple mdui-center">搜索</button>
+                  <button class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-center">搜索</button>
                 </div>
 
                 <div class="mdui-col mdui-center">
-                  <a class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-light-blue-200 mdui-ripple mdui-center"
+                  <a class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-center"
                     href="">发布求租信息</a>
                 </div>
-
               </div>
-
             </div>
-
-
-
           </div>
 
-          <!--列表-->
-          <div class="mdui-table-fluid">
-            <table class="mdui-table mdui-table-hoverable">
-              <thead>
-                <tr>
-                  <th>
-                    <p>物品类别</p>
-                  </th>
-                  <th>
-                    <p>数量</p>
-                  </th>
-                  <th>
-                    <p>联系方式</p>
-                  </th>
-                  <th>
-                    <p>所属公司</p>
-                  </th>
-                  <th>
-                    <p>地区</p>
-                  </th>
-                </tr>
-              </thead>
+          <div class="mdui-col-xs-3 mdui-p-b-3">
+            <div class="mdui-card">
+              <div class="mdui-card-media">
+                <img class="mdui-img-fluid" src="images/2.jpg">
+              </div>
+              <!-- 卡片的标题和副标题 -->
+              <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title"><a class="post-title-link" href="leasedetailinfo.html">脚手架</a></div>
+                <div class="mdui-card-primary-subtitle">
+                  南京某公司
+                  <br>
+                  联系电话: 12345678910
+                </div>
+              </div>
+              <!-- 卡片的内容 -->
+              <div class="mdui-card-content">对本公司产品的简述</div>
+            </div>
+          </div>
+          <div class="mdui-col-xs-3 mdui-p-b-3">
+            <div class="mdui-card">
+              <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
+              <div class="mdui-card-media">
+                <img class="mdui-img-fluid" src="images/2.jpg">
+              </div>
+              <!-- 卡片的标题和副标题 -->
+              <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title">脚手架</div>
+                <div class="mdui-card-primary-subtitle">
+                  南京某公司
+                  <br>
+                  联系电话: 12345678910
+                </div>
+              </div>
+              <!-- 卡片的内容 -->
+              <div class="mdui-card-content">对本公司产品的简述</div>
+            </div>
+          </div>
+          <div class="mdui-col-xs-3 mdui-p-b-3">
+            <div class="mdui-card">
+              <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
+              <div class="mdui-card-media">
+                <img class="mdui-img-fluid" src="images/2.jpg">
+              </div>
+              <!-- 卡片的标题和副标题 -->
+              <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title">脚手架</div>
+                <div class="mdui-card-primary-subtitle">
+                  南京某公司
+                  <br>
+                  联系电话: 12345678910
+                </div>
+              </div>
+              <!-- 卡片的内容 -->
+              <div class="mdui-card-content">对本公司产品的简述</div>
+            </div>
+          </div>
+          <div class="mdui-col-xs-3 mdui-p-b-3">
+            <div class="mdui-card">
+              <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
+              <div class="mdui-card-media">
+                <img class="mdui-img-fluid" src="images/2.jpg">
+              </div>
+              <!-- 卡片的标题和副标题 -->
+              <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title">脚手架</div>
+                <div class="mdui-card-primary-subtitle">
+                  南京某公司
+                  <br>
+                  联系电话: 12345678910
+                </div>
+              </div>
+              <!-- 卡片的内容 -->
+              <div class="mdui-card-content">对本公司产品的简述</div>
+            </div>
+          </div>
+          <div class="mdui-col-xs-3 mdui-p-b-3">
+            <div class="mdui-card">
+              <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
+              <div class="mdui-card-media">
+                <img class="mdui-img-fluid" src="images/2.jpg">
+              </div>
+              <!-- 卡片的标题和副标题 -->
+              <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title">脚手架</div>
+                <div class="mdui-card-primary-subtitle">
+                  南京某公司
+                  <br>
+                  联系电话: 12345678910
+                </div>
+              </div>
+              <!-- 卡片的内容 -->
+              <div class="mdui-card-content">对本公司产品的简述</div>
+            </div>
+          </div>
+          <div class="mdui-col-xs-3 mdui-p-b-3">
+            <div class="mdui-card">
+              <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
+              <div class="mdui-card-media">
+                <img class="mdui-img-fluid" src="images/2.jpg">
+              </div>
+              <!-- 卡片的标题和副标题 -->
+              <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title">脚手架</div>
+                <div class="mdui-card-primary-subtitle">
+                  南京某公司
+                  <br>
+                  联系电话: 12345678910
+                </div>
+              </div>
+              <!-- 卡片的内容 -->
+              <div class="mdui-card-content">对本公司产品的简述</div>
+            </div>
+          </div>
+          <div class="mdui-col-xs-3 mdui-p-b-3">
+            <div class="mdui-card">
+              <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
+              <div class="mdui-card-media">
+                <img class="mdui-img-fluid" src="images/2.jpg">
+              </div>
+              <!-- 卡片的标题和副标题 -->
+              <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title">脚手架</div>
+                <div class="mdui-card-primary-subtitle">
+                  南京某公司
+                  <br>
+                  联系电话: 12345678910
+                </div>
+              </div>
+              <!-- 卡片的内容 -->
+              <div class="mdui-card-content">对本公司产品的简述</div>
+            </div>
+          </div>
+          <div class="mdui-col-xs-3 mdui-p-b-3">
+            <div class="mdui-card">
+              <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
+              <div class="mdui-card-media">
+                <img class="mdui-img-fluid" src="images/2.jpg">
+              </div>
 
-              <tbody onclick="ToSpecificRenting()">
-                <tr onclick="ToSpecificRenting()">
-                  <td>
-                    <p>脚手架</p>
-                  </td>
-                  <td>
-                    <p>2</p>
-                  </td>
-                  <td>
-                    <p>手机号</p>
-                  </td>
-                  <td>
-                    <p>南京某公司</p>
-                  </td>
-                  <td>
-                    <p>南京市</p>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <p>脚手架</p>
-                  </td>
-                  <td>
-                    <p>2</p>
-                  </td>
-                  <td>
-                    <p>手机号</p>
-                  </td>
-                  <td>
-                    <p>南京某公司</p>
-                  </td>
-                  <td>
-                    <p>南京市</p>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <p>脚手架</p>
-                  </td>
-                  <td>
-                    <p>2</p>
-                  </td>
-                  <td>
-                    <p>手机号</p>
-                  </td>
-                  <td>
-                    <p>南京某公司</p>
-                  </td>
-                  <td>
-                    <p>南京市</p>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <p>脚手架</p>
-                  </td>
-                  <td>
-                    <p>2</p>
-                  </td>
-                  <td>
-                    <p>手机号</p>
-                  </td>
-                  <td>
-                    <p>南京某公司</p>
-                  </td>
-                  <td>
-                    <p>南京市</p>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+              <!-- 卡片的标题和副标题 -->
+              <div class="mdui-card-primary">
+                <div class="mdui-card-primary-title">脚手架</div>
+                <div class="mdui-card-primary-subtitle">
+                  南京某公司
+                  <br>
+                  联系电话: 12345678910
+                </div>
+              </div>
+
+              <!-- 卡片的内容 -->
+              <div class="mdui-card-content">对本公司产品的简述</div>
+            </div>
           </div>
         </div>
       </div>
