--- a/租赁网站/leaseinfo.html
+++ b/租赁网站/leaseinfo.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="mdui-col mdui-center">
-                  <a class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-center"
+                  <a href="tolease.html" class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-center"
                     href="">发布求租信息</a>
                 </div>
               </div>
