--- a/租赁网站/personalcenter.html
+++ b/租赁网站/personalcenter.html
@@ -23,7 +23,7 @@
             <div class="mdui-toolbar-spacer"></div>
             <div id="user-status">
               <a href="personalcenter.html" class="mdui-btn">个人中心</a>
-              <a href="message.html" class="mdui-btn">消息</a>
+              <a href="inbox.html" class="mdui-btn">消息</a>
               <a href="index.html" onclick="Exit()" class="mdui-btn">退出</a>
             </div>
           </div>
