--- a/租赁网站/rentdetailinfo.html
+++ b/租赁网站/rentdetailinfo.html
@@ -64,15 +64,7 @@
     <div class="main-wrapper ">
       <div class="mdui-row" style="margin:160px 0">
         <div class="mdui-col-xs-8 mdui-col-offset-xs-2">
-          <div class="mdui-col-xs-5">
-            <div class="mdui-card">
-              <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
-              <div class="mdui-card-media">
-                <img class="mdui-img-fluid" src="images/2.jpg">
-              </div>
-            </div>
-          </div>
-          <div class="mdui-col-xs-7">
+          <div class="mdui-col-xs-6 mdui-col-offset-xs-3">
             <table class="mdui-table">
               <tr>
                 <th>物品类别</th>
