--- a/租赁网站/rentinginfo.html
+++ b/租赁网站/rentinginfo.html
@@ -100,7 +100,7 @@
 
                 <div class="mdui-col mdui-center">
                   <a class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-center"
-                    href="">发布求租信息</a>
+                    href="postrentinginfo.html">发布求租信息</a>
                 </div>
               </div>
             </div>
